Configured connection string

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "UseInMemoryDatabase": true,
+  "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MvDbDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-R9DA3P1V\\SQLEXPRESS;Database=MvDb;Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
