--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -23,7 +23,7 @@
 
     <ItemGroup>
       <Folder Include="Files\Maps\" />
-      <Folder Include="Persistence\Configurations\" />
+      <Folder Include="Migrations\" />
       <Folder Include="Persistence\Migrations\" />
     </ItemGroup>
 
