--- a/src/WebUI/WebUI.csproj
+++ b/src/WebUI/WebUI.csproj
@@ -24,12 +24,12 @@
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="7.0.7" />
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.7" />
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.7" />
-        <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.7" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.9" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.9" />
         <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.7">
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.9" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
@@ -50,6 +50,23 @@
         <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+      <Folder Include="Data\" />
+      <Folder Include="Models\" />
+      <Folder Include="wwwroot\css\" />
+      <Folder Include="wwwroot\images\" />
+      <Folder Include="wwwroot\js\" />
+      <Folder Include="wwwroot\lib\bootstrap\" />
+      <Folder Include="wwwroot\lib\bootstrap\dist\css\" />
+      <Folder Include="wwwroot\lib\bootstrap\dist\js\" />
+      <Folder Include="wwwroot\lib\jquery-validation-unobtrusive\" />
+      <Folder Include="wwwroot\lib\jquery-validation\" />
+      <Folder Include="wwwroot\lib\jquery-validation\dist\" />
+      <Folder Include="wwwroot\lib\jquery\" />
+      <Folder Include="wwwroot\lib\jquery\dist\" />
+    </ItemGroup>
+
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
         <!-- Ensure Node.js is installed -->
         <Exec Command="node --version" ContinueOnError="true">
@@ -63,6 +80,12 @@
     <!-- Auto-generated Open API specification and Angular TypeScript clients -->
     <PropertyGroup>
         <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+      <WarningsAsErrors />
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+      <WarningsAsErrors />
     </PropertyGroup>
 
     <Target Name="NSwag" AfterTargets="PostBuildEvent" Condition=" '$(Configuration)' == 'Debug' ">
