--- a/src/WebUI/WebUI.csproj
+++ b/src/WebUI/WebUI.csproj
@@ -54,6 +54,7 @@
       <Folder Include="Controllers\" />
       <Folder Include="Data\" />
       <Folder Include="Models\" />
+      <Folder Include="Pages\Shared\" />
       <Folder Include="wwwroot\css\" />
       <Folder Include="wwwroot\images\" />
       <Folder Include="wwwroot\js\" />
