Configure Azure database connection

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-R9DA3P1V\\SQLEXPRESS;Database=MvDb;Trusted_Connection=True;MultipleActiveResultSets=true;Trust Server Certificate=True"
+    "DefaultConnection": "Server=tcp:mvdb-server.database.windows.net,1433;Initial Catalog=mvdb-db;Persist Security Info=False;User ID=admin_main;Password=mvdbaccess2023!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
