--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -15,6 +15,12 @@
       "MvDb.WebUI": {
         "Profile": "IdentityServerSPA"
       }
+    },
+    "Key": {
+      "Type": "Store",
+      "StoreName": "My",
+      "StoreLocation": "CurrentUser",
+      "Name": "CN=MyApplication"
     }
   },
   "AllowedHosts": "*"
