--- a/src/WebUI/appsettings.Production.json
+++ b/src/WebUI/appsettings.Production.json
@@ -9,10 +9,7 @@
   },
   "IdentityServer": {
     "Key": {
-      "Type": "Store",
-      "StoreName": "My",
-      "StoreLocation": "CurrentUser",
-      "Name": "CN=MyApplication"
+      "Type": "Development"
     }
   }
 }
