--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,12 +19,11 @@ steps:
     checkLatest: true
 
 - script: |
-    cd 'src/WebUI/ClientApp'
+    cd src\WebUI\ClientApp
     npm install
   displayName: 'npm install for Angular app'
 
 - script: |
-    cd 'src/WebUI/ClientApp'
     npm run build -- --prod
   displayName: 'Build Angular app'
 
