Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,7 @@ steps:
   displayName: 'npm install for Angular app'
 
 - script: |
+    cd src\WebUI\ClientApp
     npm run build -- --prod
   displayName: 'Build Angular app'
 
