Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
 
 - script: |
     cd src\WebUI\ClientApp
-    npm install -g @angular/cli@12
+    npm install
   displayName: 'npm install for Angular app'
 
 - script: |
